[package]
name = "arb"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A command line interface for transacting arbitrage opportunities on etherfuse."
homepage = "https://app.etherfuse.com"
readme = "./README.md"
keywords = ["solana", "crypto", "defi", "arbitrage"]

[[bin]]
name = "arb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.0"
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
tokio = { version = "1.39.2", features = ["full"] }
url = "2.5"
spl-associated-token-account = { version = "=2.3.0", features = [
    "no-entrypoint",
] }
stablebond-sdk = { version = "0.3.29", features = ["sdk", "serde"] }
spl-token-2022 = { version = "^1.0.0", features = ["no-entrypoint"] }
spl-token = { version = "^4.0.0", features = ["no-entrypoint"] }
