[package]
name = "etherfuse-arb"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
description = "A command line interface for transacting arbitrage opportunities on etherfuse."
homepage = "https://app.etherfuse.com"
readme = "./README.md"
keywords = ["solana", "crypto", "defi", "arbitrage"]

[[bin]]
name = "etherfuse-arb"
path = "src/main.rs"

[dependencies]
enum_dispatch = "0.3.13"
chrono = "0.4"
anyhow = "1.0.75"
base64 = "0.13"
base58 = "0.2.0"
bincode = "1.3.3"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.0"
futures = "0.3.30"
jsonrpsee = { version = "0.22.5", features = ["http-client", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
solana-account-decoder = "^1.18"
switchboard-on-demand-client = "0.2.4"
spl-associated-token-account = { version = "=2.3.0", features = [
    "no-entrypoint",
] }
spl-token = { version = "^4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "^1.0.0", features = ["no-entrypoint"] }
stablebond-sdk = { version = "2.0.14", features = ["sdk", "serde"] }
thiserror = "1.0.50"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.16"
url = "2.5"
num-derive = "^0.3"
num-traits = "^0.2"
toml = "0.8.19"
lazy_static = "1.4.0"
